<?xml version="1.0"?>
<package format="2">
  <name>xyzgui</name>
  <version>0.0.0</version>
  <description>The xyzgui package</description>

  <maintainer email="anjunho@todo.todo">anjunho</maintainer>


  
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sys</build_depend>
  <build_depend>PyQt5</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>math</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>random</build_depend>


  <build_export_depend>sys</build_export_depend>
  <build_export_depend>PyQt5</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>math</build_export_depend>
  <build_export_depend>numpy</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>random</build_export_depend>

  <exec_depend>sys</exec_depend>
  <exec_depend>PyQt5</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>random</exec_depend>


  <export>

  </export>
</package>
